--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,10 @@
+# NGINX config based on this tutorial:
+# https://grafana.com/tutorials/run-grafana-behind-a-proxy/
+
 # This is required to proxy Grafana Live WebSocket connections.
 map $http_upgrade $connection_upgrade {
   default upgrade;
   '' close;
-}
-
-upstream grafana {
-  server grafana:3000;
 }
 
 server {
@@ -15,8 +14,8 @@ server {
 
   location /grafana {
     proxy_set_header Host $host;
-    proxy_pass http://grafana;
-    rewrite  ^/grafana/(.*)  /$1 break;
+    proxy_pass http://grafana:3000;
+    rewrite ^/grafana/(.*) /$1 break;
   }
 
   # Proxy Grafana Live WebSocket connections.
