--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
     proxy_set_header Host $host;
-    proxy_pass http://grafana;
+    proxy_pass http://grafana:3000;
     rewrite  ^/grafana/(.*)  /$1 break;
   }
 }
