--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ server {
 
   location /grafana {
     proxy_set_header Host $host;
-    proxy_pass http://grafana:3000;
+    proxy_pass http://grafana:3000/grafana;
     rewrite ^/grafana/(.*) /$1 break;
   }
 
@@ -24,7 +24,7 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
     proxy_set_header Host $host;
-    proxy_pass http://grafana:3000;
+    proxy_pass http://grafana:3000/grafana;
     rewrite  ^/grafana/(.*)  /$1 break;
   }
 }
