--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: grafana/grafana
     container_name: grafana
     restart: unless-stopped
+    volumes:
+      - ./grafana.ini:/etc/grafana/grafana.ini:ro
     ports:
       - '3000:3000'
     networks:
@@ -13,7 +15,6 @@ services:
     container_name: nginx
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./grafana.ini:/etc/grafana/grafana.ini:ro
       - ./index.html:/usr/share/nginx/html/index.html:ro
     ports:
       - '80:80'
