--- a/grafana.ini
+++ b/grafana.ini
@@ -1,4 +1,4 @@
 [server]
 domain = localhost
-http_port = 80
-root_url = %(protocol)s://%(domain)s:%(http_port)s/grafana
+root_url = %(protocol)s://%(domain)s:%(http_port)s/grafana/
+serve_from_sub_path = true
