--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - '80:80'
     networks:
       - network
+    command: [nginx-debug, '-g', 'daemon off;']
 
 networks:
   network:
