--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,8 @@
 # NGINX config based on this tutorial:
 # https://grafana.com/tutorials/run-grafana-behind-a-proxy/
 
+error_log /var/log/nginx/error.log debug;
+
 # This is required to proxy Grafana Live WebSocket connections.
 map $http_upgrade $connection_upgrade {
   default upgrade;
