Make testing simpler

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ server {
 
   location /grafana {
     proxy_set_header Host $host;
-    proxy_pass http://grafana:3000/grafana; # it seems to work without /grafana
+    proxy_pass http://grafana:3000; # it seems to work without /grafana
     # rewrite ^/grafana/(.*) /$1 break;       # it seems to work without it
   }
 
@@ -26,7 +26,7 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
     proxy_set_header Host $host;
-    proxy_pass http://grafana:3000/grafana; # it seems to work without /grafana
+    proxy_pass http://grafana:3000; # it seems to work without /grafana
     # rewrite ^/grafana/(.*) /$1 break;       # it seems to work without it
   }
 }
