--- a/grafana.ini
+++ b/grafana.ini
@@ -2,3 +2,9 @@
 domain = localhost
 root_url = %(protocol)s://%(domain)s:%(http_port)s/grafana/
 serve_from_sub_path = true
+
+[auth]
+disable_login_form = true
+
+[auth.anonymous]
+enabled = true
