--- a/nginx.conf
+++ b/nginx.conf
@@ -15,18 +15,22 @@ server {
   index index.html index.htm;
 
   location /grafana {
+    resolver 127.0.0.11; # docker resolver
     proxy_set_header Host $host;
-    proxy_pass http://grafana:3000; # it seems to work without /grafana
+    set $url grafana:3000;
+    proxy_pass http://$url; # it seems to work without /grafana
     # rewrite ^/grafana/(.*) /$1 break;       # it seems to work without it
   }
 
   # Proxy Grafana Live WebSocket connections.
   location /grafana/api/live/ {
+    resolver 127.0.0.11; # docker resolver
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
     proxy_set_header Host $host;
-    proxy_pass http://grafana:3000; # it seems to work without /grafana
+    set $url grafana:3000;
+    proxy_pass http://$url; # it seems to work without /grafana
     # rewrite ^/grafana/(.*) /$1 break;       # it seems to work without it
   }
 }
