--- a/nginx.conf
+++ b/nginx.conf
@@ -14,22 +14,24 @@ server {
   root /usr/share/nginx/html;
   index index.html index.htm;
 
-  location /grafana {
+  rewrite ^(.*/grafana)$ $1/ permanent;
+
+  location ~ ^/(.+)/grafana/(.*) {
     resolver 127.0.0.11; # docker resolver
     proxy_set_header Host $host;
-    set $url grafana:3000;
+    set $url grafana:3000/$2;
     proxy_pass http://$url; # it seems to work without /grafana
     # rewrite ^/grafana/(.*) /$1 break;       # it seems to work without it
   }
 
   # Proxy Grafana Live WebSocket connections.
-  location /grafana/api/live/ {
+  location ~ ^/(.+)/grafana/api/live/(.*) {
     resolver 127.0.0.11; # docker resolver
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
     proxy_set_header Host $host;
-    set $url grafana:3000;
+    set $url grafana:3000/$2;
     proxy_pass http://$url; # it seems to work without /grafana
     # rewrite ^/grafana/(.*) /$1 break;       # it seems to work without it
   }
