--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,7 @@ server {
     set $url grafana:3000/$2;
     proxy_pass http://$url; # it seems to work without /grafana
     # rewrite ^/grafana/(.*) /$1 break;       # it seems to work without it
+    # proxy_redirect off;
   }
 
   # Proxy Grafana Live WebSocket connections.
@@ -34,5 +35,6 @@ server {
     set $url grafana:3000/$2;
     proxy_pass http://$url; # it seems to work without /grafana
     # rewrite ^/grafana/(.*) /$1 break;       # it seems to work without it
+    # proxy_redirect off;
   }
 }
